--- a/src/app/pages/orcamentos/orcamentos.page.html
+++ b/src/app/pages/orcamentos/orcamentos.page.html
@@ -41,16 +41,20 @@
                                 </ion-col>
                             </ion-row>
                             <ion-row>
-                                <ion-col><b>Criação: </b></ion-col>
-                                <ion-col>20/02/2019</ion-col>
+                                <ion-col>Criação:</ion-col>
+                                <ion-col><b>20/02/2019</b></ion-col>
                             </ion-row>
                             <ion-row>
-                                <ion-col><b>Vencimento: </b></ion-col>
-                                <ion-col>01/12/2019</ion-col>
+                                <ion-col>Versão:</ion-col>
+                                <ion-col><b>6</b></ion-col>
                             </ion-row>
                             <ion-row>
-                                <ion-col><b>Valor: </b></ion-col>
-                                <ion-col>R$ 2400,00</ion-col>
+                                <ion-col>Vencimento:</ion-col>
+                                <ion-col><b>01/12/2019</b></ion-col>
+                            </ion-row>
+                            <ion-row>
+                                <ion-col>Valor:</ion-col>
+                                <ion-col><b>R$ 2400,00</b></ion-col>
                             </ion-row>
                         </ion-grid>
                     </ion-card-content>
@@ -77,16 +81,20 @@
                                 </ion-col>
                             </ion-row>
                             <ion-row>
-                                <ion-col><b>Criação: </b></ion-col>
-                                <ion-col>20/02/2019</ion-col>
+                                <ion-col>Criação:</ion-col>
+                                <ion-col><b>20/02/2019</b></ion-col>
                             </ion-row>
                             <ion-row>
-                                <ion-col><b>Vencimento: </b></ion-col>
-                                <ion-col>01/12/2019</ion-col>
+                                <ion-col>Versão:</ion-col>
+                                <ion-col><b>1</b></ion-col>
                             </ion-row>
                             <ion-row>
-                                <ion-col><b>Valor: </b></ion-col>
-                                <ion-col>R$ 2400,00</ion-col>
+                                <ion-col>Vencimento:</ion-col>
+                                <ion-col><b>01/12/2019</b></ion-col>
+                            </ion-row>
+                            <ion-row>
+                                <ion-col>Valor:</ion-col>
+                                <ion-col><b>R$ 2400,00</b></ion-col>
                             </ion-row>
                         </ion-grid>
                     </ion-card-content>
