Corrigindo imagem do login e realizando modificações para resolver bug

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,12 +12,12 @@
             </ion-item>
             <ion-item class="selecao" lines="none">
                 <ion-label position="fixed">Ambiente</ion-label>
-                <ion-select>
+                <ion-select style="padding: 0; margin: 0;">
                     <ion-select-option selected value="P">PRODUCAO</ion-select-option>
                     <ion-select-option value="H">HOMOLOGACAO</ion-select-option>
                 </ion-select>
             </ion-item>
-            <ion-button shape="round" fill="solid" color="light" float-right (click)="loginClick()">
+            <ion-button size="small" shape="round" fill="solid" color="light" float-right (click)="loginClick()">
                 CONECTAR
             </ion-button>
         </div>
