ajustes no css do login

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -32,7 +32,9 @@ ion-item ion-label{
 }
 
 ion-button{
-    margin-top: 16px;
+    margin-top: 0px;
+    margin-right: 16px;
+    margin-bottom: 0px;
     margin-left: 16px;   
     --border-radius: 0;
 }
