Corrigindo erros de digitação

--- a/src/app/pages/itens/itens.page.html
+++ b/src/app/pages/itens/itens.page.html
@@ -16,7 +16,7 @@
             <p>{{itens.length}} Itens | Total: <b> R$ 2.400,00 </b></p>
         </ion-label>
         <ion-button (click)="showMenu($event)" expand="full">
-            Ordernar
+            Ordenar
             <ion-icon slot="start" name="funnel"></ion-icon>
         </ion-button>
     </ion-item>
