--- a/src/app/pages/orcamentos/orcamentos.page.html
+++ b/src/app/pages/orcamentos/orcamentos.page.html
@@ -13,7 +13,7 @@
             <h1><b>Em aprovação</b></h1>
         </ion-label>
         <ion-button (click)="showMenu($event)" expand="full">
-            Ordernar
+            Ordenar
             <ion-icon slot="start" name="funnel"></ion-icon>
         </ion-button>
     </ion-item>
