--- a/src/app/pages/orcamento-novo/orcamento-novo.page.html
+++ b/src/app/pages/orcamento-novo/orcamento-novo.page.html
@@ -15,10 +15,10 @@
             <ion-icon name="apps"></ion-icon>
         </ion-fab-button>
         <ion-fab-list side="top">
-            <ion-fab-button disabled color="secondary">
+            <ion-fab-button (click)="fabClick()" color="secondary">
                 <ion-icon name="list-box"></ion-icon>
             </ion-fab-button>
-            <ion-fab-button disabled color="secondary">
+            <ion-fab-button color="secondary" disabled>
                 <ion-icon name="calculator"></ion-icon>
             </ion-fab-button>
         </ion-fab-list>
