Removendo menu de ordenação da tela de itens vazios.

--- a/src/app/itens-vazio/itens-vazio.page.html
+++ b/src/app/itens-vazio/itens-vazio.page.html
@@ -12,10 +12,9 @@
 <ion-content>
   <ion-item lines="full">
       <ion-label text-wrap>
-          
           <p>0 Itens | Total: <b> R$ 00,00 </b></p>
       </ion-label>
-      <ion-button (click)="showMenu($event)" expand="full">
+      <ion-button expand="full" disabled>
           Ordenar
           <ion-icon slot="start" name="funnel"></ion-icon>
       </ion-button>
