Subindo tela de impostos.

--- a/src/app/pages/item-editar/item-editar.page.html
+++ b/src/app/pages/item-editar/item-editar.page.html
@@ -52,7 +52,7 @@
                 <ion-icon slot="start" name="save"></ion-icon>
                 Salvar
             </ion-button>
-            <ion-button color="danger">
+            <ion-button color="danger" (click)="impostoClick()">
                 <ion-icon slot="start" name="calculator"></ion-icon>
                 Impostos
             </ion-button>
