--- a/src/app/pages/orcamento-editar/orcamento-editar.page.html
+++ b/src/app/pages/orcamento-editar/orcamento-editar.page.html
@@ -18,7 +18,7 @@
             <ion-fab-button (click)="fabClick()" color="secondary">
                 <ion-icon name="list-box"></ion-icon>
             </ion-fab-button>
-            <ion-fab-button color="secondary">
+            <ion-fab-button (click)="impostoClick()" color="secondary">
                 <ion-icon name="calculator"></ion-icon>
             </ion-fab-button>
         </ion-fab-list>
