--- a/src/app/pages/orcamento-novo/orcamento-novo.page.html
+++ b/src/app/pages/orcamento-novo/orcamento-novo.page.html
@@ -18,7 +18,7 @@
             <ion-fab-button (click)="fabClick()" color="secondary">
                 <ion-icon name="list-box"></ion-icon>
             </ion-fab-button>
-            <ion-fab-button color="secondary" disabled>
+            <ion-fab-button color="secondary" (click)="impostoClick()">
                 <ion-icon name="calculator"></ion-icon>
             </ion-fab-button>
         </ion-fab-list>
