Subindo melhorias visuais

--- a/src/app/impostos/impostos.page.html
+++ b/src/app/impostos/impostos.page.html
@@ -11,6 +11,9 @@
 
 <ion-content>
   <ion-grid>
+    <ion-row class="valores" style="padding-left: 5px">
+      <b>Total Liquido: </b> R$ 00,00
+    </ion-row>
     <ion-row class="cabecalho">
       <ion-col>
         IPI
@@ -92,7 +95,7 @@
         R$ 00,00
       </ion-col>
     </ion-row>
-    <ion-row class="cabecalho"> 
+    <ion-row class="cabecalho">
       <ion-col>
         PIS
       </ion-col>
@@ -177,10 +180,10 @@
           </ion-col>
         </ion-row>
         <ion-row class="subtitulo">
-            <ion-col>
-              Valor
-            </ion-col>
-          </ion-row>
+          <ion-col>
+            Valor
+          </ion-col>
+        </ion-row>
         <ion-row class="valores">
           <ion-col>
             R$ 00,00
@@ -214,7 +217,7 @@
         ICMS Destinatário
       </ion-col>
     </ion-row>
-    <ion-row  class="subtitulo">
+    <ion-row class="subtitulo">
       <ion-col>
         Alíquota
       </ion-col>
@@ -243,7 +246,7 @@
     </ion-row>
     <ion-row class="valores">
       <ion-col>
-        0% 
+        0%
       </ion-col>
       <ion-col>
         0%
@@ -253,25 +256,25 @@
       </ion-col>
     </ion-row>
     <ion-row class="cabecalho">
-        <ion-col>
-          FECP ICMS
-        </ion-col>
-      </ion-row>
-      <ion-row class="subtitulo">
-        <ion-col>
-          Alíquota
-        </ion-col>
-        <ion-col>
-          Valor
-        </ion-col>
-      </ion-row>
-      <ion-row class="valores">
-        <ion-col>
-          0%
-        </ion-col>
-        <ion-col>
-          R$ 00,00
-        </ion-col>
-      </ion-row>
+      <ion-col>
+        FECP ICMS
+      </ion-col>
+    </ion-row>
+    <ion-row class="subtitulo">
+      <ion-col>
+        Alíquota
+      </ion-col>
+      <ion-col>
+        Valor
+      </ion-col>
+    </ion-row>
+    <ion-row class="valores">
+      <ion-col>
+        0%
+      </ion-col>
+      <ion-col>
+        R$ 00,00
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
