Realocando paginas, criando a pagina de configuração e atualuzando o README.md

--- a/src/app/pages/endereco-editar/endereco-editar.page.html
+++ b/src/app/pages/endereco-editar/endereco-editar.page.html
@@ -41,12 +41,12 @@
     <ion-item>
         <ion-label position="floating">Cidade</ion-label>
         <ion-input name="cidade" type="text" value="Niterói"></ion-input>
-        <ion-icon name="search" slot="start"></ion-icon>
+        <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
     <ion-item>
         <ion-label position="floating">País</ion-label>
         <ion-input name="pais" type="text" value="Brasil"></ion-input>
-        <ion-icon name="search" slot="start"></ion-icon>
+        <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
     <ion-item>
         <ion-label position="floating">Telefone</ion-label>
@@ -75,7 +75,7 @@
     <ion-item>
         <ion-label position="floating">Região</ion-label>
         <ion-input name="regiao" type="text" value="BR"></ion-input>
-        <ion-icon name="search" slot="start"></ion-icon>
+        <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
 </ion-content>
 <ion-footer>
