--- a/src/app/pages/item-editar/item-editar.page.html
+++ b/src/app/pages/item-editar/item-editar.page.html
@@ -41,6 +41,9 @@
         <ion-label position="floating">Quantidade</ion-label>
         <ion-input name="diasEntrega" type="text" value="2"></ion-input>
     </ion-item>
+    <ion-item style="--padding-start: 0px">
+        <ion-label style="padding-left: 16px"><b>Saldo: </b>50 UN</ion-label>
+    </ion-item>
     <ion-item style="--padding-start: 0px" lines="none">
         <ion-label style="padding-left: 16px"><b>Total: </b>R$ 700,00</ion-label>
     </ion-item>
