--- a/src/app/pages/item-novo/item-novo.page.html
+++ b/src/app/pages/item-novo/item-novo.page.html
@@ -42,6 +42,9 @@
         <ion-input name="diasEntrega" type="number"></ion-input>
     </ion-item>
     <ion-item style="--padding-start: 0px">
+        <ion-label style="padding-left: 16px"><b>Saldo: </b>0</ion-label>
+    </ion-item>
+    <ion-item style="--padding-start: 0px">
         <ion-label style="padding-left: 16px"><b>Total: </b>R$ 00,00</ion-label>
     </ion-item>
 </ion-content>
