--- a/src/app/pages/orcamento-editar/orcamento-editar.page.html
+++ b/src/app/pages/orcamento-editar/orcamento-editar.page.html
@@ -40,11 +40,25 @@
         <ion-label><b>Status: </b>Em Aprovação</ion-label>
     </ion-item>
     <ion-item>
+        <ion-label position="floating">Estoque</ion-label>
+        <ion-input name="estoque" type="text" value="RJ - Rio de Janeiro"></ion-input>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Almoxarifado</ion-label>
+      <ion-input name="almoxarifado" type="text" value="AM - Liberado Venda"></ion-input>
+      <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>   
+    <ion-item>
         <ion-label position="stacked">Cliente</ion-label>
         <ion-input name="cliente" type="text" value="Hospital de Clinicas de Niterói"></ion-input>
         <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
-
+    <ion-item>
+        <ion-label position="floating">Tipo de Operação</ion-label>
+        <ion-input name="tipoDeOperacao" type="text"  value="Remessa de Consignação" ></ion-input>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
     <ion-item>
         <ion-label position="stacked">Endereço de Entrega</ion-label>
         <ion-input name="enderecoEntrega" type="text" value="Rua La Salle, 12 - Centro, Niterói - RJ, 24020-096">
