Testando mudança para implantar pwa

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -36,19 +36,19 @@
 
         <ion-card-content>
             <ion-grid>
-                <ion-row>
+                <ion-row (click)="cardClick()">
                     <ion-col>Em Aprovação</ion-col>
                     <ion-col><b>R$ 1.345,00</b></ion-col>
                 </ion-row>
-                <ion-row>
+                <ion-row (click)="cardClick()">
                     <ion-col>Aprovados</ion-col>
                     <ion-col><b>R$ 13.456,30</b></ion-col>
                 </ion-row>
-                <ion-row>
+                <ion-row (click)="cardClick()">
                     <ion-col>Faturados</ion-col>
                     <ion-col><b>R$ 22.963,79</b></ion-col>
                 </ion-row>
-                <ion-row>
+                <ion-row (click)="cardClick()">
                     <ion-col>Cancelado</ion-col>
                     <ion-col><b>R$ 500,79</b></ion-col>
                 </ion-row>
