--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -21,40 +21,62 @@
                 <ion-select-option value="J">Janeiro</ion-select-option>
                 <ion-select-option value="F" selected>Fevereiro</ion-select-option>
             </ion-select>
+            
         </ion-item>
-        <h3 style="text-align:center">Números do Período</h3>
-        <div style="display: block;">
-            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [colors]="chartColors"
-                [chartType]="doughnutChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"
-                [options]="barChartOptions"></canvas>
-        </div>
-    </div>
-    <ion-card>
-        <ion-card-header>
-            <ion-card-title>Valores Movimentados</ion-card-title>
-        </ion-card-header>
 
-        <ion-card-content>
-            <ion-grid>
-                <ion-row (click)="cardClick()">
-                    <ion-col>Em Aprovação</ion-col>
-                    <ion-col><b>R$ 1.345,00</b></ion-col>
-                </ion-row>
-                <ion-row (click)="cardClick()">
-                    <ion-col>Aprovados</ion-col>
-                    <ion-col><b>R$ 13.456,30</b></ion-col>
-                </ion-row>
-                <ion-row (click)="cardClick()">
-                    <ion-col>Faturados</ion-col>
-                    <ion-col><b>R$ 22.963,79</b></ion-col>
-                </ion-row>
-                <ion-row (click)="cardClick()">
-                    <ion-col>Cancelado</ion-col>
-                    <ion-col><b>R$ 500,79</b></ion-col>
-                </ion-row>
-            </ion-grid>
-        </ion-card-content>
-    </ion-card>
+        <ion-grid>
+            <ion-row style="padding: 0%; margin: 0;"> 
+                <ion-col size="12" size-md="6">
+                    <ion-card>
+                        <ion-card-header> 
+                                    <ion-card-title>Gráfico do Período</ion-card-title>
+                        </ion-card-header>                          
+                        <ion-card-content style="padding: 0;">
+                                        <div style="display: block;">
+                                                <canvas baseChart 
+                                                    [data]="doughnutChartData"
+                                                    [labels]="doughnutChartLabels" 
+                                                    [colors]="chartColors"
+                                                    [chartType]="doughnutChartType"
+                                                    (chartHover)="chartHovered($event)" 
+                                                    (chartClick)="chartClicked($event)"
+                                                    [options]="barChartOptions"></canvas>
+                                            </div>
+                        </ion-card-content>
+                    </ion-card>                     
+                </ion-col>           
+                <ion-col size="12" size-md="6">
+                    <ion-card>
+                         <ion-card-header>
+                             <ion-card-title>Valores Movimentados</ion-card-title>
+                         </ion-card-header>
+                        
+                         <ion-card-content>
+                             <ion-grid>
+                                 <ion-row (click)="cardClick()">
+                                     <ion-col>Em Aprovação</ion-col>
+                                     <ion-col><b>R$ 1.345,00</b></ion-col>
+                                 </ion-row>
+                                 <ion-row (click)="cardClick()">
+                                     <ion-col>Aprovados</ion-col>
+                                     <ion-col><b>R$ 13.456,30</b></ion-col>
+                                 </ion-row>
+                                 <ion-row (click)="cardClick()">
+                                     <ion-col>Faturados</ion-col>
+                                     <ion-col><b>R$ 22.963,79</b></ion-col>
+                                 </ion-row>
+                                 <ion-row (click)="cardClick()">
+                                     <ion-col>Cancelado</ion-col>
+                                     <ion-col><b>R$ 500,79</b></ion-col>
+                                 </ion-row>
+                             </ion-grid>
+                         </ion-card-content>
+                    </ion-card>
+                </ion-col>                     
+            </ion-row>
+        </ion-grid>
+    </div>
+
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
         <ion-fab-button (click)="fabClick()" color="secondary">
             <ion-icon name="add"></ion-icon>
