--- a/src/app/pages/orcamento-editar/orcamento-editar.page.html
+++ b/src/app/pages/orcamento-editar/orcamento-editar.page.html
@@ -38,21 +38,6 @@
     </ion-item>
     <ion-item lines="full">
         <ion-label><b>Status: </b>Em Aprovação</ion-label>
-    </ion-item>
-    <ion-item>
-        <ion-label position="floating">Tipo de Operação</ion-label>
-        <ion-input name="tipoDeOperacao" type="text"  value="Remessa de Consignação" ></ion-input>
-        <ion-icon name="search" slot="end"></ion-icon>
-    </ion-item>    
-    <ion-item>
-        <ion-label position="floating">Estoque</ion-label>
-        <ion-input name="estoque" type="text" value="RJ - Rio de Janeiro"></ion-input>
-        <ion-icon name="search" slot="end"></ion-icon>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Almoxarifado</ion-label>
-      <ion-input name="almoxarifado" type="text" value="AM - Liberado Venda"></ion-input>
-      <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>   
     <ion-item>
         <ion-label position="stacked">Cliente</ion-label>
@@ -61,7 +46,7 @@
     </ion-item>
     <ion-item>
         <ion-label position="stacked">Endereço de Entrega</ion-label>
-        <ion-input name="enderecoEntrega" type="text" value="Rua La Salle, 12 - Centro, Niterói - RJ, 24020-096">
+        <ion-input (click)="enderecoClick()" name="enderecoEntrega" type="text" value="Rua La Salle, 12 - Centro, Niterói - RJ, 24020-096">
         </ion-input>
         <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
