--- a/src/app/pages/orcamento-novo/orcamento-novo.page.html
+++ b/src/app/pages/orcamento-novo/orcamento-novo.page.html
@@ -28,28 +28,13 @@
     </ion-item>
     <br>
     <ion-item>
-        <ion-label position="floating">Tipo de Operação</ion-label>
-        <ion-input name="tipoDeOperacao" type="text"></ion-input>
-        <ion-icon name="search" slot="end"></ion-icon>
-    </ion-item>
-    <ion-item>
-        <ion-label position="floating">Estoque</ion-label>
-        <ion-input name="estoque" type="text" value="RJ - Rio de Janeiro"></ion-input>
-        <ion-icon name="search" slot="end"></ion-icon>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Almoxarifado</ion-label>
-      <ion-input name="almoxarifado" type="text" value="AM - Liberado Venda"></ion-input>
-      <ion-icon name="search" slot="end"></ion-icon>
-    </ion-item>
-    <ion-item>
         <ion-label position="floating">Cliente</ion-label>
         <ion-input name="cliente" type="text"></ion-input>
         <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
     <ion-item>
         <ion-label position="floating">Endereço de Entrega</ion-label>
-        <ion-input name="enderecoEntrega" type="text"></ion-input>
+        <ion-input (click)="enderecoClick()" name="enderecoEntrega" type="text"></ion-input>
         <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
 
