Subindo melhorias de disgner

--- a/src/app/pages/impostos/impostos.page.scss
+++ b/src/app/pages/impostos/impostos.page.scss
@@ -1,14 +1,15 @@
 .cabecalho {
     margin-top: 5px;
-    background: rgb(94, 94, 95);
+    background: #1f335e;
     color: white;
 }
 .subtitulo{
-    background:  rgb(127, 127, 129); 
+    background:  #1B4F72; 
     color: white;
 }
 .valores{
-    background:  rgb(198, 198, 201); 
+    background: #AED6F1; 
     padding-top: 5px;
     padding-bottom: 5px;
+    font-weight: bold;    
 }
