--- a/src/app/pages/enderecos-cliente/enderecos-cliente.page.html
+++ b/src/app/pages/enderecos-cliente/enderecos-cliente.page.html
@@ -9,13 +9,8 @@
   </ion-toolbar>
 </ion-header>
   <ion-searchbar showCancelButton placeholder="Buscar"></ion-searchbar>
-  <ion-content>
-    <ion-fab  vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button (click)="fabClick()" color="secondary">
-            <ion-icon name="add"></ion-icon>
-        </ion-fab-button>
-    </ion-fab>   
-   
+  <ion-content style="padding:0;">
+ 
     <ion-list>
       <ion-list-header>
             <ion-label><h1>Hospital de Clinicas de Niterói</h1></ion-label>
@@ -25,3 +20,8 @@
       </ion-item>
     </ion-list> 
 </ion-content>
+<ion-fab  vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="fabClick()" color="secondary">
+        <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+</ion-fab>  
