--- a/src/app/pages/condicao-pagamento/condicao-pagamento.page.html
+++ b/src/app/pages/condicao-pagamento/condicao-pagamento.page.html
@@ -4,15 +4,15 @@
           <ion-back-button></ion-back-button>
       </ion-buttons>
       <ion-title>
-          Endereços
+          Condição de Pagamento
       </ion-title>
   </ion-toolbar>
 </ion-header>
   <ion-searchbar showCancelButton placeholder="Buscar"></ion-searchbar>
   <ion-content style="padding:0;">
      <ion-list>
-        <ion-item *ngFor="let endereco of enderecos; let i=index " (click)="ItemClick(i)" style="--padding-end:16px; font-weight: bold;">
-            <ion-label color="primary" text-wrap>{{endereco}}</ion-label>
-        </ion-item>
-    </ion-list> 
+      <ion-item *ngFor="let condicaoPagamento of condicoesPagamento; let i=index" (click)="ItemClick(i)"  style="--padding-end:16px;">
+        <ion-label color="primary" text-wrap>{{condicaoPagamento}}</ion-label>
+      </ion-item>
+     </ion-list> 
 </ion-content>
