--- a/src/app/pages/orcamento-editar/orcamento-editar.page.html
+++ b/src/app/pages/orcamento-editar/orcamento-editar.page.html
@@ -11,14 +11,14 @@
 
 <ion-content padding>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button color="secondary">
+        <ion-fab-button color="primary">
             <ion-icon name="apps"></ion-icon>
         </ion-fab-button>
         <ion-fab-list side="top">
-            <ion-fab-button (click)="fabClick()" color="secondary">
+            <ion-fab-button (click)="fabClick()" color="primary">
                 <ion-icon name="list-box"></ion-icon>
             </ion-fab-button>
-            <ion-fab-button (click)="impostoClick()" color="secondary">
+            <ion-fab-button (click)="impostoClick()" color="primary">
                 <ion-icon name="calculator"></ion-icon>
             </ion-fab-button>
         </ion-fab-list>
