--- a/src/app/pages/orcamento-novo/orcamento-novo.page.html
+++ b/src/app/pages/orcamento-novo/orcamento-novo.page.html
@@ -11,50 +11,50 @@
 
 <ion-content padding>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button color="secondary">
+        <ion-fab-button color="primary">
             <ion-icon name="apps"></ion-icon>
         </ion-fab-button>
         <ion-fab-list side="top">
-            <ion-fab-button (click)="fabClick()" color="secondary">
+            <ion-fab-button (click)="fabClick()" color="primary">
                 <ion-icon name="list-box"></ion-icon>
             </ion-fab-button>
-            <ion-fab-button color="secondary" (click)="impostoClick()">
+            <ion-fab-button color="primary" (click)="impostoClick()">
                 <ion-icon name="calculator"></ion-icon>
             </ion-fab-button>
         </ion-fab-list>
     </ion-fab>
-    <ion-item lines="full">
-        <ion-label><b>Valor Total: </b> R$ 00,00 </ion-label>
+    <ion-item lines="full" *ngFor="let item of orcamento.ItensOrcamentoVendas">
+        <ion-label><b>Valor Total: </b> R$ {{item.Total}} </ion-label>
     </ion-item>
     <br>
     <ion-item>
         <ion-label position="floating">Cliente</ion-label>
-        <ion-input name="cliente" type="text"></ion-input>
+        <ion-input (click)="clienteClick()" [(ngModel)]="orcamento.DescricaoCliente" name="cliente" type="text"></ion-input>
         <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
     <ion-item>
         <ion-label position="floating">Endereço de Entrega</ion-label>
-        <ion-input (click)="enderecoClick()" name="enderecoEntrega" type="text"></ion-input>
+        <ion-input (click)="enderecoClick()" [(ngModel)]="orcamento.CodigoEnderecoEntrega" name="enderecoEntrega" type="text"></ion-input>
         <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
 
     <ion-item>
         <ion-label position="floating">Condição de Pagamento</ion-label>
-        <ion-input name="condicaoPagamento" type="text"></ion-input>
+        <ion-input (click)="condicaoPagamentoClick()" [(ngModel)]="orcamento.CodigoCondicaoPagamento" name="condicaoPagamento" type="text"></ion-input>
         <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
 
     <ion-item>
         <ion-label position="floating">Tipo de Entrega</ion-label>
-        <ion-input name="tipoEntrega" type="text"></ion-input>
+        <ion-input (click)="tipoEntregaClick()" [(ngModel)]="orcamento.CodigoTipoEntrega" name="tipoEntrega" type="text"></ion-input>
         <ion-icon name="search" slot="end"></ion-icon>
     </ion-item>
     <ion-grid>
         <ion-row>
             <ion-col size="6">
                 <ion-item>
-                    <ion-label position="stacked">Validade</ion-label>
-                    <ion-input name="validade" type="date"></ion-input>
+                    <ion-label position="floating">Validade</ion-label>
+                    <ion-input name="validade" type="number"></ion-input>
                 </ion-item>
             </ion-col>
             <ion-col size="6">
@@ -77,7 +77,7 @@
 <ion-footer>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-button color="success" disabled>
+            <ion-button (click)="gravarOrcamento()">
                 <ion-icon slot="start" name="save"></ion-icon>
                 Salvar
             </ion-button>
